client/src/SCSS/home/projects-bugs-shared/item/itemContainer.scss
@import "../../../utils/variables";
@import "../../../utils//mixins";

.item-container-component {
	.item-container {
		position: fixed;
		top: $navbar-height + $top-bar-height + $top-bar-border-width;
		left: 0px;
		background-color: white;
		// Height and width values were found through trial and error
		// ...to make modal resize (using js) look less jumpy
		height: 90vh;
		width: 95vw;
		font-size: $base-font-size;
		font-family: Arial, Helvetica, sans-serif;
		overflow-y: auto !important;
		overflow-x: auto !important;
	}

	.item-container--shifted-right {
		left: $list-sidebar-width + $list-sidebar-border-width;
		width: 80vw;
	}

	// Must be a seperate div inside .item-content-container so the padding
	// ...does not affect the resize so it goes beyond the modal
	.padding-container {
		padding: 0px 25px 25px 25px;
	}

	.item-creation-date {
		margin: 5px;
		text-align: center;
		font-size: 16px;
	}

	// Pairs item-boxs together
	.pair-container {
		float: left;
		width: 100%;
	}

	// Seperates item-boxs
	.outer-dividing-container {
		float: left;
		width: 100%;
		min-width: $item-outer-dividing-container-min-width;
	}

	.outer-dividing-container--half-width {
		width: 50%;
	}

	.item-box {
		margin: 10px;
		border: 2px solid black;
		background-color: $light-gray;
		padding: 0px 20px 20px 20px;
		overflow-wrap: anywhere;
	}

	.item-box--desciption-info-height {
		height: $description-info-item-box-height;
	}

	// Used in ItemContainerEditInfo to calculate description size using JS
	.item-box--invisible {
		position: absolute;
		visibility: hidden;
	}

	// Located here since both display and edit components use it
	.item-box__description {
		display: block;
		padding: 13px 5px 13px 5px;
		line-height: $common-line-height;
	}

	.item-box__group {
		display: inline-block;
	}

	.item-box__group--right {
		float: right;
	}

	.item-box__title {
		text-align: center;
		font-size: 140%;
	}

	.item-box__title--no-bottom-margin {
		margin-bottom: 0px;
	}

	.item-box__group__field {
		margin-bottom: 25px;
	}

	.item-box__group__field--no-bottom-margin {
		margin-bottom: 0px;
	}

	.item-box__group__field--inline-flex {
		display: inline-flex;
	}

	.item-box__form-character-counter {
		float: right;
		margin: 5px 2px 2px 0px;
	}

	.item-box__form-textarea {
		outline: none;
		margin-bottom: 10px;
		border: 2px solid black;
		background-color: white;
		padding: 4px 8px 4px 8px;
		height: 180px;
		width: 100%;
		line-height: $common-line-height;
		font-family: Arial, Helvetica, sans-serif;
		font-size: $base-font-size;
		// sizing
		-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
		-moz-box-sizing: border-box; /* Firefox, other Gecko */
		box-sizing: border-box; /* Opera/IE 8+ */
		resize: none;
	}

	.item-box__form-textarea--shorter {
		height: 100px;
	}

	.bottom-row-height-filler {
		height: 65px;
	}
}

